added lines 13, 14 with register

--- a/dellemc_get_system_inventory.yml
+++ b/dellemc_get_system_inventory.yml
@@ -10,3 +10,5 @@
        idrac_ip:   "{{ idrac_ip }}"
        idrac_user: "{{ idrac_user }}"
        idrac_pwd:  "{{ idrac_pwd }}"
+    register: sysinv
+  - debug: var=sysinv 
